src/manifests/reranker-service/04-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reranker-deployment
  namespace: models
  labels: &id001
    app.kubernetes.io/name: reranker
    app.kubernetes.io/component: reranker
    app.kubernetes.io/managed-by: gen_reranker
    app.kubernetes.io/instance: reranker
    env: nonprod
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: reranker
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  template:
    metadata:
      labels: *id001
      annotations:
        gen-reranker/inputs-hash: 285eea712085d4dda446471f272a1b24210e8583c32b3ca373b37d8c0d2f8ea0
        prometheus.io/scrape: 'true'
        prometheus.io/port: '8202'
        prometheus.io/path: /metrics
    spec:
      serviceAccountName: reranker-sa
      containers:
      - name: reranker
        image: ghcr.io/athithya-sakthivel/reranker:2026-04-26-08-57--a0cce10@sha256:2faec17dc969915508635a582151817dbbc33301aaa2d976490a6fedc73d9b13
        ports:
        - containerPort: 8202
        livenessProbe:
          httpGet:
            path: /health
            port: 8202
          initialDelaySeconds: 30
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 6
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8202
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 3
        startupProbe:
          httpGet:
            path: /readyz
            port: 8202
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 60
        resources:
          requests:
            cpu: 250m
            memory: 512Mi
          limits:
            cpu: 1000m
            memory: 2Gi
        securityContext:
          runAsNonRoot: true
          runAsUser: 1000
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
        volumeMounts:
        - name: tmp-writable
          mountPath: /tmp
        - name: tmp-writable
          mountPath: /var/tmp
        - name: tmp-writable
          mountPath: /usr/tmp
        - name: models-cache
          mountPath: /models_cache
      securityContext:
        fsGroup: 1000
        runAsNonRoot: true
      volumes:
      - name: tmp-writable
        emptyDir: {}
      - name: models-cache
        emptyDir: {}
