src/manifests/reranker-service/05-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reranker-svc
  namespace: inference
  labels:
    app.kubernetes.io/name: reranker
    app.kubernetes.io/component: reranker
    app.kubernetes.io/managed-by: gen_reranker
    app.kubernetes.io/instance: reranker
    env: nonprod
spec:
  type: ClusterIP
  ports:
  - port: 8202
    targetPort: 8202
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: reranker
