src/manifests/reranker-service/06-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: reranker
  namespace: inference
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: reranker
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: inference
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: indexing
    ports:
    - port: 8202
      protocol: TCP
  egress:
  - to:
    - namespaceSelector: {}
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
